[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.39", features = ["full"] }
serde_json = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
proc-macro2 = "1.0" 

[dev-dependencies]
reqwest = "0.12"
tokio = { version = "1.39", features = ["full"] }